# lets-bootstrap

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
docs/: bootstrap.html  index.html  search.js
docs/bootstrap/: resample.html  simulation.html  types.html
docs/site/: bootstrap.html  search.js
docs/site/bootstrap/: ci.html  functional.html  resample.html  simulation.html  types.html
docs/templates/: custom.css  module.html.jinja2
src/bootstrap/: __init__.py  ci.py  functional.py  resample.py  simulation.py  types.py
tests/: conftest.py  test_bootstrap_distribution.py  test_bootstrap_samples.py  test_functional.py  test_init.py
