[project]
name = "lets-bootstrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Turkel", email = "daturkel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "pytest-coverage>=0.0",
    "scipy>=1.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--cov=bootstrap", "--cov-report=html", "--cov-report=term"]
testpaths = ["tests"]

[dependency-groups]
notebooks = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
]
tests = [
    "pytest>=8.3.5",
]
